# wgpu-tutorial

./: Cargo.toml  README.md
beginner/: surface.rs
buffers/: buffers.rs
camera/: camera.rs  shader.wgsl  texture.rs  uniform_buffers_and_a_3d_camera.rs
pipeline/: pipeline.rs  shader.wgsl  shader2.wgsl
src/: main.rs
textures/: shader.wgsl  texture.rs  textures_and_bind_groups.rs
