[package]
name = "wgpu-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
image = "0.23"
wgpu = "0.12"
winit = "0.26"

[[example]]
name = "Surface"
path = "beginner/surface.rs"

[[example]]
name = "Pipeline"
path = "pipeline/pipeline.rs"

[[example]]
name = "Buffers"
path = "buffers/buffers.rs"

[[example]]
name = "Textures"
path = "textures/textures_and_bind_groups.rs"
